--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <div class="btn">
             <a href="#Contactme">
-                <button class="Contact" >Contact Me</button>
+                <button class="Contact">Contact Me</button>
             </a>
         </div>
     </header>
@@ -93,12 +93,12 @@
         </div>
         <div class="skillsNames">
             <div class="box">
-                <img src="./html.png" alt="">
+                <img src="./html.png" alt="" >
                 <h3>HTML</h3>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores dicta illo quasi qui possimus.
                     Obcaecati nesciunt sapiente ab error voluptatum optio asperiores dolores, quidem, odio est
                     consequuntur fugit, et explicabo?</p>
-                <a href="#">
+                <a href="#" target="_blank">
                     Details
                     <i class="fa-solid fa-arrow-right fa-l"></i>
                 </a>
@@ -109,24 +109,33 @@
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores dicta illo quasi qui possimus.
                     Obcaecati nesciunt sapiente ab error voluptatum optio asperiores dolores, quidem, odio est
                     consequuntur fugit, et explicabo?</p>
-                <a href="#">
+                <a href="#" target="_blank">
                     Details
                     <i class="fa-solid fa-arrow-right fa-l"></i>
                 </a>
             </div>
-
             <div class="box">
                 <img src="./js.png" alt="">
                 <h3>JavaScript</h3>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores dicta illo quasi qui possimus.
                     Obcaecati nesciunt sapiente ab error voluptatum optio asperiores dolores, quidem, odio est
                     consequuntur fugit, et explicabo?</p>
-                <a href="#">
+                <a href="#" target="_blank">
                     Details
                     <i class="fa-solid fa-arrow-right fa-l"></i>
                 </a>
             </div>
-            
+            <div class="box ">
+                <img src="./bootstrap.png" alt="" class="bootstrap">
+                <h3>Bootstrap</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores dicta illo quasi qui possimus.
+                    Obcaecati nesciunt sapiente ab error voluptatum optio asperiores dolores, quidem, odio est
+                    consequuntur fugit, et explicabo?</p>
+                <a href="#" target="_blank">
+                    Details
+                    <i class="fa-solid fa-arrow-right fa-l"></i>
+                </a>
+            </div>
         </div>
     </section>
     <section class="Projects" id="Projects">
@@ -134,8 +143,8 @@
             <h2>My <span>Projects</span></h2>
         </div>
         <div class="projectContent">
-            <a href="">
-            <div class="row">
+            <a href="https://raviprakashchoudhary.github.io/Weather-Report/" target="_blank" target="_blank">
+                <div class="row">
                     <img src="./weather.png" alt="">
                     <div class="mainRow">
                         <div class="rowText">
@@ -143,84 +152,87 @@
                         </div>
                         <i class="fa-brands fa-github"></i>
                     </div>
-                    <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. At assumenda dicta laboriosam rem quis
-                        fugit praesentium a, pariatur in, autem architecto.</h4>
+                    <h4>In this Project I have learned and implemented how to fetch data using API and use of the data
+                        in our application</h4>
                 </div>
             </a>
-<a href="">
-
-    <div class="row">
-        <img src="./BookSelling.jpg" alt="">
-        <div class="mainRow">
-            <div class="rowText">
-                <h5>Book Selling Website</h5>
-            </div>
-            <i class="fa-brands fa-github"></i>
-        </div>
-        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. At assumenda dicta laboriosam rem quis fugit
-            praesentium a, pariatur in, autem architecto.</h4>
-    </div>
-</a>
-
-        <div class="row">
-            <img src="OnlineMovie.jpg" alt="">
-            <div class="mainRow">
-                <div class="rowText">
-                    <h5>Movie Streaming App</h5>
+            <a href="https://raviprakashchoudhary.github.io/BookSelling/" target="_blank">
+                <div class="row">
+                    <img src="./BookSelling.jpg" alt="">
+                    <div class="mainRow">
+                        <div class="rowText">
+                            <h5>Book Selling Website</h5>
+                        </div>
+                        <i class="fa-brands fa-github"></i>
+                    </div>
+                    <h4>In This project I have learned how can we eaisaly devolope a fast, responsive sites
+                        with Bootstrap.</h4>
                 </div>
-                <i class="fa-brands fa-github"></i>
-            </div>
-            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. At assumenda dicta laboriosam rem quis fugit
-                praesentium a, pariatur in, autem architecto.</h4>
-        </div>
-        <div class="row">
-            <img src="./login.jpg" alt="">
-            <div class="mainRow">
-                <div class="rowText">
-                    <h5>Movie Streaming App</h5>
+            </a>
+            <a href="https://raviprakashchoudhary.github.io/Movi-Website-Using-API/" target="_blank">
+                <div class="row">
+                    <img src="OnlineMovie.jpg" alt="">
+                    <div class="mainRow">
+                        <div class="rowText">
+                            <h5>Movie Streaming App</h5>
+                        </div>
+                        <i class="fa-brands fa-github"></i>
+                    </div>
+                    <h4>In this Project I have learned and implemented how to fetch data and create application, using
+                        API</h4>
                 </div>
-                <i class="fa-brands fa-github"></i>
-            </div>
-            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. At assumenda dicta laboriosam rem quis fugit
-                praesentium a, pariatur in, autem architecto.</h4>
-        </div>
-        <div class="row">
-            <img src="./cardGame.jpg" alt="">
-            <div class="mainRow">
-                <div class="rowText">
-                    <h5>Memory Game</h5>
+            </a>
+            <a href="https://raviprakashchoudhary.github.io/LoginPage/" target="_blank">
+                <div class="row">
+                    <img src="./login.jpg" alt="">
+                    <div class="mainRow">
+                        <div class="rowText">
+                            <h5>Login & Register Page</h5>
+                        </div>
+                        <i class="fa-brands fa-github"></i>
+                    </div>
+                    <h4>In this Project I have practice and used the HTML CSS and JavaScript to create a fancy Login and
+                        Registration Page. </h4>
                 </div>
-                <i class="fa-brands fa-github"></i>
-            </div>
-            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. At assumenda dicta laboriosam rem quis fugit
-                praesentium a, pariatur in, autem architecto.</h4>
-        </div>
-
-        <div class="row">
-            <img src="./TTT.jpg" alt="">
-            <div class="mainRow">
-                <div class="rowText">
-                    <h5>Memory Game</h5>
+            </a>
+            <a href="https://raviprakashchoudhary.github.io/Card/" target="_blank">
+                <div class="row">
+                    <img src="./cardGame.jpg" alt="">
+                    <div class="mainRow">
+                        <div class="rowText">
+                            <h5>Memory Game</h5>
+                        </div>
+                        <i class="fa-brands fa-github"></i>
+                    </div>
+                    <h4>In This project I have learned how to use JavaScript and how can we display timer on any web
+                        Application.</h4>
                 </div>
-                <i class="fa-brands fa-github"></i>
-            </div>
-            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. At assumenda dicta laboriosam rem quis fugit
-                praesentium a, pariatur in, autem architecto.</h4>
-        </div>
-
-        <div class="row">
-            <img src="./SPS.jpg" alt="">
-            <div class="mainRow">
-                <div class="rowText">
-                    <h5>Memory Game</h5>
+            </a>
+            <a href="https://raviprakashchoudhary.github.io/TTT/" target="_blank">
+                <div class="row">
+                    <img src="./TTT.jpg" alt="">
+                    <div class="mainRow">
+                        <div class="rowText">
+                            <h5>Tic Tac Toe</h5>
+                        </div>
+                        <i class="fa-brands fa-github"></i>
+                    </div>
+                    <h4>We can Learn the basic Implementation of the JavaScript in web and App development.</h4>
                 </div>
-                <i class="fa-brands fa-github"></i>
-            </div>
-            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. At assumenda dicta laboriosam rem quis fugit
-                praesentium a, pariatur in, autem architecto.</h4>
+            </a>
+            <a href="https://raviprakashchoudhary.github.io/SPS/" target="_blank">
+                <div class="row">
+                    <img src="./SPS.jpg" alt="">
+                    <div class="mainRow">
+                        <div class="rowText">
+                            <h5>Stone Paper Scissor</h5>
+                        </div>
+                        <i class="fa-brands fa-github"></i>
+                    </div>
+                    <h4>We can Learn the basic Implementation of the JavaScript in web and App development.</h4>
+                </div>
+            </a>
         </div>
-
-    </div>
     </section>
     <section id="Contactme" class="Contactme">
         <div class="centerText">
