--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
         <div class="mainContent">
             <h4>Hi, There!</h4>
             <h1>I'm <span>Ravi Choudhary</span></h1>
-            <p>Lorem ipsum dolor sit amet consectetur amet consectetur amet consectetur adipisicing elit. facere
-                veritatis.</p>
+            <p>Skilled Web Developer proficient in HTML, CSS, and JavaScript, with additional expertise in tools such as GitHub, Canva, and Jira. </p>
             <div class="socialLinks">
                 <a href="#"><i class="fa-brands fa-facebook fa-lg"></i></a>
                 <a href="#"><i class="fa-brands fa-instagram fa-lg"></i></a>
