--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
             <a href="#Projects">
                 <li>Projects</li>
             </a>
-            <a href="#Contactme">
+            <!-- <a href="#Contactme">
                 <li>Contact</li>
-            </a>
+            </a> -->
         </div>
         <div class="btn">
             <a href="#Contactme">
@@ -41,16 +41,18 @@
         <div class="mainContent">
             <h4>Hi, There!</h4>
             <h1>I'm <span>Ravi Choudhary</span></h1>
-            <p>Skilled Web Developer proficient in HTML, CSS, and JavaScript, with additional expertise in tools such as GitHub, Canva, and Jira. </p>
+            <p>Skilled Web Developer proficient in HTML, CSS, and JavaScript, with additional expertise in tools such as
+                GitHub, Canva, and Jira. </p><br>
             <div class="socialLinks">
                 <a href="#"><i class="fa-brands fa-facebook fa-lg"></i></a>
                 <a href="#"><i class="fa-brands fa-instagram fa-lg"></i></a>
-                <a href="#"><i class="fa-brands fa-github fa-lg"></i></a>
-                <a href="#"><i class="fa-regular fa-envelope fa-lg"></i></a>
+                <a href="https://github.com/RaviPrakashChoudhary" target="_blank"><i
+                        class="fa-brands fa-github fa-lg"></i></a>
+                <a href="mailto:er.raviprakashchoudhary@gmail.com"><i class="fa-regular fa-envelope fa-lg"></i></a>
             </div>
             <div class="HireDownload">
-                <a href="#" class="hirebtn">Hire Me</a>
-                <a href="#" class="downbtn">Download CV</a>
+                <a href="mailto:er.raviprakashchoudhary@gmail.com" class="hirebtn">Hire Me</a>
+                <a href="./CV.pdf" download="CV" class="downbtn">Download CV</a>
             </div>
         </div>
     </section>
@@ -65,10 +67,10 @@
             </h2>
             <div class="expArea">
                 <p class="exp">
-                    Experience: <span>2 Years</span>
+                    Experience: <span>2 Years 6 Months</span>
                 </p>
                 <p class="exp">
-                    Speciality: <span>Web Devolopment</span>
+                    Speciality: <span>Frontend Web Devolopment</span>
                 </p>
                 <p class="exp">
                     Address:<span>India</span>
@@ -80,9 +82,11 @@
                     Phone: <span>+91 7908556844</span>
                 </p>
                 <p class="exp">
-                    Freelance: <span>Available</span>
+                    Current Company: <span>HCL Tech</span>
                 </p>
-                <button class="hirebtn">View All Projects</button>
+                <a href="#Projects">
+                    <button  class="hirebtn">View All Projects</button>
+                </a>
             </div>
         </div>
     </section>
@@ -92,48 +96,184 @@
         </div>
         <div class="skillsNames">
             <div class="box">
-                <img src="./html.png" alt="" >
+                <img src="./html.png" alt="">
                 <h3>HTML</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores dicta illo quasi qui possimus.
-                    Obcaecati nesciunt sapiente ab error voluptatum optio asperiores dolores, quidem, odio est
-                    consequuntur fugit, et explicabo?</p>
-                <a href="#" target="_blank">
-                    Details
-                    <i class="fa-solid fa-arrow-right fa-l"></i>
-                </a>
+                <p>
+                <ol>
+                    <li>
+                        Developed and maintained multiple websites using HTML, CSS, and JavaScript.
+                    </li><br><br>
+                    <li>
+                        Proficient in writing clean, semantic HTML code to ensure accessibility and SEO optimization.
+                    </li><br>
+                    <li>
+                        Collaborated with designers and developers to implement responsive web designs compatible across
+                        various devices.
+                    </li>
+                </ol>
+                </p>
             </div>
             <div class="box">
                 <img src="./css.png" alt="">
                 <h3>CSS</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores dicta illo quasi qui possimus.
-                    Obcaecati nesciunt sapiente ab error voluptatum optio asperiores dolores, quidem, odio est
-                    consequuntur fugit, et explicabo?</p>
-                <a href="#" target="_blank">
+                <p>
+                <ol>
+                    <li>
+                        Familiarity with CSS methodologies like BEM (Block Element Modifier) for scalable and
+                        maintainable CSS architecture.
+                    </li><br>
+                    <li>
+                        Knowledgeable in implementing CSS frameworks such as Bootstrap and Foundation to streamline
+                        frontend development.
+                    </li><br>
+                    <li>
+                        Strong understanding of CSS3 features including transitions, animations, and transforms for
+                        creating engaging user experiences.
+                    </li>
+                </ol>
+                </p>
+                <!-- <a href="#" target="_blank">
                     Details
                     <i class="fa-solid fa-arrow-right fa-l"></i>
-                </a>
+                </a> -->
             </div>
             <div class="box">
                 <img src="./js.png" alt="">
                 <h3>JavaScript</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores dicta illo quasi qui possimus.
-                    Obcaecati nesciunt sapiente ab error voluptatum optio asperiores dolores, quidem, odio est
-                    consequuntur fugit, et explicabo?</p>
-                <a href="#" target="_blank">
+                <p>
+                <ol>
+                    <li>
+                        Knowledgeable in utilizing third-party libraries and APIs to extend the functionality of web
+                        applications.
+
+                    </li><br>
+                    <li>
+                        Familiarity with ES6+ features such as arrow functions, template literals, destructuring, and
+                        async/await for writing modern JavaScript code.
+                    </li><br>
+                    <li>
+                        Strong understanding of CSS3 features including transitions, animations, and transforms for
+                        creating engaging user experiences.
+                    </li>
+                </ol>
+                </p>
+                <!-- <a href="#" target="_blank">
                     Details
                     <i class="fa-solid fa-arrow-right fa-l"></i>
-                </a>
+                </a> -->
             </div>
             <div class="box ">
                 <img src="./bootstrap.png" alt="" class="bootstrap">
                 <h3>Bootstrap</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores dicta illo quasi qui possimus.
-                    Obcaecati nesciunt sapiente ab error voluptatum optio asperiores dolores, quidem, odio est
-                    consequuntur fugit, et explicabo?</p>
-                <a href="#" target="_blank">
+                <p>
+                <ol>
+                    <li>
+                        Skilled in leveraging Bootstrap's grid system, utilities, and pre-built components to streamline
+                        frontend development and enhance user experience.
+
+                    </li><br>
+                    <li>
+                        Strong understanding of Bootstrap's CSS and JavaScript components for building responsive
+                        layouts, navigation bars, forms, and other UI elements.
+                    </li><br>
+                    <li>
+                        Knowledgeable in integrating Bootstrap with other frontend frameworks or libraries to extend its
+                        functionality and enhance project capabilities.
+                    </li>
+                </ol>
+                </p>
+                <!-- <a href="#" target="_blank">
                     Details
                     <i class="fa-solid fa-arrow-right fa-l"></i>
-                </a>
+                </a> -->
+            </div>
+            <div class="box ">
+                <img src="./jira.jpg" alt="" class="bootstrap">
+                <h3>Jira</h3>
+                <p>
+                <ol>
+                    <li>
+                        Strong understanding of Bootstrap's CSS and JavaScript components for building responsive
+                        layouts, navigation bars, forms, and other UI elements.
+                    </li><br>
+                    <li>
+                        Familiarity with Bootstrap's documentation and best practices for efficient implementation and
+                        customization.
+                    </li><br>
+                    <li>
+                        Knowledgeable in integrating Bootstrap with other frontend frameworks or libraries to extend its
+                        functionality and enhance project capabilities.
+                    </li>
+                </ol>
+                </p>
+                <!-- <a href="#" target="_blank">
+                    Details
+                    <i class="fa-solid fa-arrow-right fa-l"></i>
+                </a> -->
+            </div>
+            <div class="box ">
+                <img src="./reactjs.jpg" alt="" class="bootstrap">
+                <h3>ReactJS</h3>
+                <p>
+                <ol>
+                    <li>
+                        Strong understanding of React.js fundamentals including components, props, state, and JSX
+                        syntax.
+                    </li><br>
+                    <li>
+                        Familiarity with React Router for implementing client-side routing and navigation in SPAs.
+                    </li><br>
+                    <li>
+                        Knowledgeable in integrating third-party libraries and APIs with React applications to extend
+                        functionality and access external data sources.
+
+                    </li>
+                </ol>
+                </p>
+                <!-- <a href="#" target="_blank">
+                    Details
+                    <i class="fa-solid fa-arrow-right fa-l"></i>
+                </a> -->
+            </div>
+            <div class="box ">
+                <img src="./nodejs.webp" alt="" class="bootstrap">
+                <h3>NodeJS</h3>
+                <p>
+                <ol>
+                    <li>
+                        Strong understanding of Node.js fundamentals including modules, streams, buffers, and event
+                        loop.
+                    </li><br>
+                    <li>
+                        Familiarity with npm (Node Package Manager) for managing dependencies, installing packages, and
+                        executing scripts.
+                    </li>
+                </ol>
+                </p>
+                <!-- <a href="#" target="_blank">
+                    Details
+                    <i class="fa-solid fa-arrow-right fa-l"></i>
+                </a> -->
+            </div>
+            <div class="box ">
+                <img src="./git.png" alt="" class="bootstrap">
+                <h3>Git</h3>
+                <p>
+                <ol>
+                    <li>
+                        Strong understanding of Git concepts including branching models, remote repositories, and Git
+                        workflows.
+                    </li><br>
+                    <li>
+                        Collaborated with team members using Git for version control in a software development project,
+                        managing feature branches, and merging changes using pull requests.
+                    </li>
+                </ol>
+                </p>
+                <!-- <a href="#" target="_blank">
+                    Details
+                    <i class="fa-solid fa-arrow-right fa-l"></i>
+                </a> -->
             </div>
         </div>
     </section>
@@ -164,7 +304,7 @@
                         </div>
                         <i class="fa-brands fa-github"></i>
                     </div>
-                    <h4>In This project I have learned how can we eaisaly devolope a fast, responsive sites
+                    <h4>In This project I have learned and utilise how can we eaisaly devolope a fast, responsive sites
                         with Bootstrap.</h4>
                 </div>
             </a>
@@ -203,7 +343,7 @@
                         </div>
                         <i class="fa-brands fa-github"></i>
                     </div>
-                    <h4>In This project I have learned how to use JavaScript and how can we display timer on any web
+                    <h4>In This project I have learned and utilise how to use JavaScript and how can we display timer on any web
                         Application.</h4>
                 </div>
             </a>
@@ -216,7 +356,7 @@
                         </div>
                         <i class="fa-brands fa-github"></i>
                     </div>
-                    <h4>We can Learn the basic Implementation of the JavaScript in web and App development.</h4>
+                    <h4>I have learn and utilise the basic Implementation of the JavaScript in web and App development.</h4>
                 </div>
             </a>
             <a href="https://raviprakashchoudhary.github.io/SPS/" target="_blank">
@@ -228,7 +368,7 @@
                         </div>
                         <i class="fa-brands fa-github"></i>
                     </div>
-                    <h4>We can Learn the basic Implementation of the JavaScript in web and App development.</h4>
+                    <h4>I have learn and utilise the basic Implementation of the JavaScript in web and App development.</h4>
                 </div>
             </a>
         </div>
@@ -238,16 +378,16 @@
             <h2>Contact <span>Me</span></h2>
         </div>
         <div class="form">
-            <form action="">
-                <input class="NameEmail" type="text" placeholder="Enter Your Name">
-                <input class="NameEmail" type="text" placeholder="Enter Your Email">
+            <form id="contactForm">
+                <input class="NameEmail name" type="text" placeholder="Enter Your Name">
+                <input class="NameEmail email" type="text" placeholder="Enter Your Email">
                 <textarea class="message" placeholder="Enter Your Message" id="" cols="30" rows="10"></textarea>
                 <button type="submit" value="send message">Send Message</button>
             </form>
         </div>
     </section>
     <footer>
-        <p>All Rights Reserved, Ravi Prakash Choudhary.</p>
+        <p>@All Rights Reserved, Ravi Prakash Choudhary.</p>
         <div class="slideUp">
             <a href="#hero">
                 <i class="fa-regular fa-circle-up fa-2xl"></i>
